[gd_scene load_steps=2 format=3 uid="uid://knpxehglpha1"]

[ext_resource type="Script" path="res://UI/player_status.gd" id="1_kqv04"]

[node name="Player Status" type="PanelContainer"]
texture_filter = 1
offset_right = 64.0
offset_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"ClearPanelContainer"
script = ExtResource("1_kqv04")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HealthDisplay" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="DamageDelay" type="Timer" parent="VBoxContainer/PanelContainer/HealthDisplay"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="DamageBar" type="ProgressBar" parent="VBoxContainer/PanelContainer/HealthDisplay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 7.0
theme_type_variation = &"DamageBar"
value = 100.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/PanelContainer/HealthDisplay/DamageBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 7.0
theme_type_variation = &"HealthBar"
value = 60.0
show_percentage = false

[node name="StatusDisplay" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 5

[connection signal="timeout" from="VBoxContainer/PanelContainer/HealthDisplay/DamageDelay" to="." method="_on_damage_delay_timeout"]
